# ntc-smart-contract-mvp

./: LICENSE.md  README.md  build.sh  compile.py  create.sh  create_signature.py  encode_decode_test.py  package-lock.json  pyproject.toml  requirements.txt  script_creation.sh  test.sh  test_append.sh
.github/workflows/: docs.yml
contracts/naut_prototype/: drt_demo.py  script_functions.sh  test_claim.sh
docs/: drt_demo.html  index.html  search.js
goal_tests/: create.sh
goal_tests/contributor_append/: box_storage_owner_buyer.py
goal_tests/contributor_ownership_change/: change_contributor.sh
goal_tests/drt_create/: box_storage_name_helper.py  claim_drt.sh  create_drt.sh
pyteal_helpers/: global_blob.py  inline_asm.py  program.py  strings.py
python_sdk/: test_methods.py
python_sdk/helpers/: resources.py  setup.py  util.py
python_sdk/methods/: sc_create_method.py  sc_methods.py
python_sdk/transaction_constructions/: operation_txns.py
scripts/: operations.py  test_SmartContractDeployment.py
scripts/helpers/: resources.py  util.py
tests/: box_storage_name.py  test.sh  test_con_change.sh  test_drt_change.sh  test_py.sh
tests/contributor_append/: contribute.sh
tests/contributor_royalties_claim/: contribute.sh
tests/create_drt/: claim_drt.sh  create_drt.sh
tests/drt_buy/: buy_drt.sh
tests/drt_create/: claim_drt.sh
tests/drt_ownership_change/: change_ownerhsip.sh
