[tool.poetry]
name = "wallet-backend-services"
version = "0.1.0"
description = ""
authors = ["Nautilus"]
readme = "README.md"
packages = [
    { include = "drt_demo.py", from = "contracts/naut_prototype" },
    { include = "pyteal_helpers" },
]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.1.1"
fastapi = "^0.87.0"
pydantic = "^1.10.2"
atomicwrites = ">=1.4.1"
attrs = ">=22.1.0"
black = ">=22.8.0"
cffi = ">=1.15.1"
click = ">=8.1.3"
colorama = ">=0.4.5"
iniconfig = ">=1.1.1"
msgpack = ">=1.0.4"
mypy = ">=0.971"
mypy-extensions = ">=0.4.3"
packaging = ">=21.3"
pathspec = ">=0.10.1"
platformdirs = ">=2.5.2"
pluggy = ">=1.0.0"
py = ">=1.11.0"
py-algorand-sdk = ">=1.18.0"
pycparser = ">=2.21"
pycryptodomex = ">=3.15.0"
pynacl = "1.5.0"
pyparsing = ">=3.0.9"
pyteal = ">=0.20.1"
pytest = ">=7.1.3"
regex = ">=2022.9.13"
six = ">=1.16.0"
toml = ">=0.10.2"
tomli = ">=2.0.1"
typing-extensions = ">=4.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
tox = "^3.27.1"
tox-poetry-installer = { extras = ["poetry"], version = "^0.10.0" }
pylint = "^2.15.5"
pyupgrade = "^3.2.2"
isort = "^5.10.1"
bandit = "^1.7.4"
rich = "^12.6.0"
devtools = "^0.9.0"
pdoc = "^12.3.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
